methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:22: error: Unmatched closing brace '}' ignored here
}
^